# promptmatrix.github.io

./: .cursorrules  .env.cloud.example  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FOUNDERS.md  LICENSE  PROMPTMATRIX-SKILL.md  README.md  SECURITY.md  alembic.ini  check_health.py  dashboard.html  dashboard.js  docker-compose.yml  index.html  llms.txt  main.py  manifest.json  modify_pricing.py  pmx.py  privacy.html  pyproject.toml  requirements.txt  robots.txt  site.webmanifest  sitemap.xml  standalone.html  start.bat  start.sh  sw.js  terms.html
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: eval_prompts.yml  test.yml
app/: config.py  database.py  models.py
app/api/v1/: approvals.py  audit.py  auth.py  evals.py  keys.py  orgs.py  projects.py  prompts.py  webhooks.py
app/core/: auth.py  email.py  policy.py
app/serve/: cache.py  router.py
app/services/: audit_service.py  auth_service.py  prompt_service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  064e66916c25_denormalize_api_key_org_id_plan.py  8629bc78c047_add_check_constraints.py  9a0a8f177027_local_production_upgrade_v1.py
prompts/: README.md  assistant.persona.txt
sdk/: README.md  pyproject.toml
sdk/promptmatrix/: __init__.py  client.py
tests/: conftest.py  test_auth.py  test_config.py  test_evals.py  test_keys.py  test_prompts.py  test_serve.py  verify_audit_chain.py
