[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptmatrix-sdk"
version = "0.1.0"
description = "Official Python SDK for PromptMatrix — live prompt management for AI applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "PromptMatrix", email = "support@promptmatrix.io"}
]
keywords = ["llm", "prompt", "management", "ai", "governance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []  # Zero required dependencies

[project.optional-dependencies]
async = ["anyio>=4.0"]
dev = ["pytest", "pytest-asyncio", "anyio"]

[project.urls]
Homepage = "https://promptmatrix.github.io"
Repository = "https://github.com/PromptMatrix/promptmatrix.github.io"
Documentation = "https://github.com/PromptMatrix/promptmatrix.github.io/tree/main/sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptmatrix*"]
